@@ -1,3 +1,11 @@
+2008-12-03  Eric Seidel  <eric@webkit.org>
+
+        Rubber-stamped by David Hyatt.
+
+        Bring the WebCore chromium build a couple steps closer to building.
+
+        * WebCore.scons:
+
 2008-12-03  Kevin Ollivier  <kevino@theolliviers.com>
 
         wx build fix.
